# ai-music-arranger

./: README.md  pyproject.toml  requirements.txt
src/: main.py  models.py  services.py  utils.py
tests/: test_integration_workflows.py  test_main.py  test_models.py  test_services.py  test_utils.py
